# wav-fourier-chladni

./: .gitignore  MANIFEST.in  README.md  install.sh  pyproject.toml  voca-spectral.py
wav_fourier_chladni/: chladni_simulator.html  cli.py  fourier_analysis.html  fourier_transform_analysis.md
